NetworkPolicy/ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchlabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchlabels:
              name: api-pod
          # Allow traffic from a specific namespace
          namespaceSelector:
            matchlabels:
              project: prod
        # Allow traffic from a specific IP address
        - ipBlock:
            cidr: 192.168.1.10/32
      ports:
        - protocol: TCP
          port: 3306
